# HexacareV1

./: .clangd  AGENTS.md  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  ETAT_CODE.md  Kconfig.projbuild  LexacareV1.code-workspace  README.md  lexacare-QUICKSTART.md  lexacare-README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.capture_audio_plot  sdkconfig.capture_lidar  sdkconfig.capture_mode  sdkconfig.defaults  sdkconfig.full  sdkconfig.production
.cursor/agents/: esp-stm32-firmware-reviewer.md  redacteur-doc-ingenierie-fr.md
.cursor/plans/: hexacare_v2_cdc_tree_mesh_fa000457.plan.md
_archive_arduino/: DOCUMENTATION.md  README.md  idf_component.yml
_archive_arduino/include/: lexacare_protocol.h
_archive_arduino/src/: lexacare_protocol.cpp  main.cpp
_archive_arduino/tools/: lexacare_monitor.py  requirements.txt
agents/: firmware.md  python.md  reference-oracle.md  tinyml-bridge.md
components/ai_engine/: CMakeLists.txt  fall_detection_ai.cc
components/ai_engine/include/: fall_detection_ai.h
components/cjson/: CMakeLists.txt
components/hw_diag/: CMakeLists.txt  hw_diag.c
components/i2s_stereo_mic/: CMakeLists.txt
components/lexacare_types/: CMakeLists.txt
components/mesh_manager/: CMakeLists.txt  Kconfig
components/mesh_network/: CMakeLists.txt  mesh_manager.c  ota_node.c
components/mesh_network/include/: mesh_manager.h  ota_node.h
components/mfcc_dsp/: CMakeLists.txt
components/pc_diag/: CMakeLists.txt  pc_diag.c
components/pca9555_io/: CMakeLists.txt
components/sensor_acq/: CMakeLists.txt  bme280_driver.c  hdc1080_driver.c  lidar_driver.c  mic_driver.c  radar_driver.c  vl53l8cx_platform.c
components/sensor_acq/include/: bme280_driver.h  hdc1080_driver.h  lidar_driver.h  mic_driver.h  radar_driver.h  vl53l8cx_platform.h
components/sensor_acq/uld/: README.md  platform.h  vl53l8cx_plugin_motion_indicator.c  vl53l8cx_plugin_xtalk.c
components/sys_storage/: CMakeLists.txt  littlefs_manager.c  log_writer.c  panic_handler.c
components/tflm_dual_runtime/: CMakeLists.txt
components/tr_espnow/: CMakeLists.txt
components/tr_espnow/include/: tr_espnow.h
components/tr_espnow/include_priv/: tr_espnow_priv.h
components/tr_espnow/src/: espnow_msg.c  espnow_neighbor.c  espnow_tree.c  tr_espnow.c
components/tr_wifimesh/: CMakeLists.txt
components/vl53l8cx_array/: CMakeLists.txt
components/vl53l8cx_array/include/: vl53l8cx_array.h  vl53l8cx_platform_esp_idf.h
components/vl53l8cx_array/src/: vl53l8cx_array.c  vl53l8cx_platform_esp_idf.c
docs/: CODE_PRINCIPAL.md
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  bme280__driver_8c.html  bme280__driver_8c.js  bme280__driver_8c__incl.map  bme280__driver_8c__incl.md5  bme280__driver_8c_a126e932030b8c2df71f1c9cd3aecb04b_icgraph.map  bme280__driver_8c_a126e932030b8c2df71f1c9cd3aecb04b_icgraph.md5  bme280__driver_8c_a16050495a4e02a1498ceadf9a19db1e2_cgraph.md5  bme280__driver_8c_a16050495a4e02a1498ceadf9a19db1e2_icgraph.map  bme280__driver_8c_source.html  (+847 more)
include/: lexacare_protocol.h
knowledge/: gotchas.md  hardware-pinout.md  memory-budget.md  references.md  tinyml-pipeline.md
main/: CMakeLists.txt  app_config.h  app_events.h  app_main.c  idf_component.yml  lexa_config.h  lexa_tof_frame_ascii.c  lexa_tof_frame_ascii.h  main.c  orchestrator.c  sensors_board.c  sensors_board.h  task_audio.c  task_capture.c  task_helpers.h  task_mesh_bench.c  task_mfcc_debug.c  task_usb_telemetry.c  task_vision.c  usb_telemetry.h
prompts/: add-new-keyword.md  debug-boot-loop.md  validate-mfcc-drift.md
src/: lexacare_protocol.cpp  lexacare_protocol.h  main.cpp
tools/: PythonManagementToolV2.py  fix_doxygen_latex_miktex.ps1  lexa_live_config.example.json  lexa_live_monitor.py  lexacare_monitor.py  lexacare_monitor_preview.html  lexacare_studio_requirements.txt  read_lexa_tof_frame.py  record_lexa_audio.py  requirements.txt  requirements_tof_frame.txt
(+1070 files in other folders)
